Fix two scroll bars overlapping
Issue-ID: SDC-4615

--- a/catalog-ui/src/app/ng2/pages/properties-assignment/tosca-function/tosca-custom-function/tosca-custom-function.component.less
+++ b/catalog-ui/src/app/ng2/pages/properties-assignment/tosca-function/tosca-custom-function/tosca-custom-function.component.less
@@ -23,7 +23,6 @@
 @import "../../../../../../assets/styles/sprite.less";
 
 .component-container {
-    max-height: 500px;
     overflow: scroll;
     padding: 0 5px;
     &::-webkit-scrollbar-track {
